split display and add_shapes and fine tuning

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,40 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e014e63e-43f9-41c3-ae0c-42c7f745690c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<link rel=\"stylesheet\" href=\"https://unpkg.com/three-cad-viewer@0.9.0-beta.9/dist/three-cad-viewer.css\">"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import json\n",
-    "from cad_viewer_widget import CadViewer\n",
-    "from cad_viewer_widget.serializer import default\n",
-    "from IPython.display import HTML, display\n",
-    "\n",
-    "def encode(shape):\n",
-    "    return json.dumps(shape, default=default)\n",
-    "\n",
-    "html = \"\"\"<link rel=\"stylesheet\" href=\"https://unpkg.com/three-cad-viewer@0.9.0-beta.9/dist/three-cad-viewer.css\">\"\"\"\n",
-    "display(HTML(html))"
+    "from cad_viewer_widget import CadViewer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "06d7a35d-c99c-47d7-94d3-622f21559f86",
    "metadata": {},
    "outputs": [],
@@ -141,38 +120,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a9f4b252-28df-4551-a8ed-bba03c6f02ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "994b871c1ba0413b8b1c94357fde2ce5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "CadViewer(options={'needsAnimationLoop': False, 'measure': False}, shapes='{\"name\": \"Group\", \"id\": \"/Group\", \"…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv = CadViewer(\n",
-    "    shapes=encode(box1), \n",
-    "    states=states,\n",
-    "    options={\"needsAnimationLoop\":False, \"measure\":False}\n",
-    ")\n",
+    "cv = CadViewer(options={\"cadWidth\":640, \"height\":480, \"theme\":\"light\"})\n",
     "cv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "283d12aa-a00f-4cfe-97de-800397b38c72",
+   "id": "6790e14e-df84-4f5a-80c6-e8ffb433d7a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.add_shapes(box1, states, options={})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74899046-f6de-4df7-bc14-32ab6fdb1516",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,30 +169,151 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "259acdbc3a354af19114d21465f79a6e": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "994b871c1ba0413b8b1c94357fde2ce5": {
+     "5ae2b554c753409eafe90b9290915de6": {
       "model_module": "cad-viewer-widget",
       "model_module_version": "^0.1.0",
       "model_name": "CadViewerModel",
       "state": {
        "_model_module_version": "^0.1.0",
        "_view_module_version": "^0.1.0",
-       "layout": "IPY_MODEL_259acdbc3a354af19114d21465f79a6e",
+       "layout": "IPY_MODEL_90212725d4e548349cf521260c72d463",
        "options": {
+        "ambientIntensity": 0.9,
+        "cadWidth": 640,
+        "directIntensity": 0.12,
+        "height": 480,
         "measure": false,
-        "needsAnimationLoop": false
+        "needsAnimationLoop": false,
+        "normalLen": 0,
+        "ortho": true,
+        "theme": "light",
+        "treeWidth": 240
        },
-       "shapes": "{\"name\": \"Group\", \"id\": \"/Group\", \"loc\": null, \"parts\": [{\"type\": \"shapes\", \"id\": \"/Group/Part_0\", \"name\": \"Part_0\", \"color\": \"#e8b024\", \"shape\": {\"vertices\": [\"_f32\", [24, 3], \"eJxjYGDYz4CJ7dFoGNseixg2OWxq0c1DNxebvdjsQ8ekuB2XOlxutwcA8hQjuQ==\"], \"triangles\": [1, 2, 0, 1, 3, 2, 5, 4, 6, 5, 6, 7, 11, 8, 9, 11, 10, 8, 15, 13, 12, 15, 12, 14, 19, 16, 17, 19, 18, 16, 23, 21, 20, 23, 20, 22], \"normals\": [\"_f32\", [24, 3], \"eJxjYGjYz8DA0MAABkSx7RmgDOLYYP5+EtjIdhDDJtUOYs0FswFs8yPp\"], \"edges\": [\"_f32\", [12, 2, 3], \"eJxjYGDYz4CJ7bGw7dHY+7GIYzODGLOwYWxyxNqJLobuFmzuwOoWACIjI7k=\"]}}]}",
-       "states": {
-        "/Group/Part_0": [
-         1,
-         1
-        ]
+       "shapes": {
+        "options": {
+         "ambientIntensity": 0.9,
+         "cadWidth": 640,
+         "directIntensity": 0.12,
+         "height": 480,
+         "measure": false,
+         "needsAnimationLoop": false,
+         "normalLen": 0,
+         "ortho": true,
+         "theme": "light",
+         "treeWidth": 240
+        },
+        "shapes": "{\"name\": \"Group\", \"id\": \"/Group\", \"loc\": null, \"parts\": [{\"type\": \"shapes\", \"id\": \"/Group/Part_0\", \"name\": \"Part_0\", \"color\": \"#e8b024\", \"shape\": {\"vertices\": [\"_f32\", [24, 3], \"eJxjYGDYz4CJ7dFoGNseixg2OWxq0c1DNxebvdjsQ8ekuB2XOlxutwcA8hQjuQ==\"], \"triangles\": [1, 2, 0, 1, 3, 2, 5, 4, 6, 5, 6, 7, 11, 8, 9, 11, 10, 8, 15, 13, 12, 15, 12, 14, 19, 16, 17, 19, 18, 16, 23, 21, 20, 23, 20, 22], \"normals\": [\"_f32\", [24, 3], \"eJxjYGjYz8DA0MAABkSx7RmgDOLYYP5+EtjIdhDDJtUOYs0FswFs8yPp\"], \"edges\": [\"_f32\", [12, 2, 3], \"eJxjYGDYz4CJ7bGw7dHY+7GIYzODGLOwYWxyxNqJLobuFmzuwOoWACIjI7k=\"]}}]}",
+        "states": {
+         "/Group/Part_0": [
+          1,
+          1
+         ]
+        }
+       },
+       "tracks": []
+      }
+     },
+     "64b3f8418e6745599b0493725f5af2b6": {
+      "model_module": "cad-viewer-widget",
+      "model_module_version": "^0.1.0",
+      "model_name": "CadViewerModel",
+      "state": {
+       "_model_module_version": "^0.1.0",
+       "_view_module_version": "^0.1.0",
+       "layout": "IPY_MODEL_c51fdc8e820c4d78b250504101d1b1a0",
+       "options": {
+        "ambientIntensity": 0.9,
+        "cadWidth": 640,
+        "directIntensity": 0.12,
+        "height": 480,
+        "measure": false,
+        "needsAnimationLoop": false,
+        "normalLen": 0,
+        "ortho": true,
+        "theme": "light",
+        "treeWidth": 240
+       },
+       "shapes": {
+        "options": {
+         "ambientIntensity": 0.9,
+         "cadWidth": 640,
+         "directIntensity": 0.12,
+         "height": 480,
+         "measure": false,
+         "needsAnimationLoop": false,
+         "normalLen": 0,
+         "ortho": true,
+         "theme": "light",
+         "treeWidth": 240
+        },
+        "shapes": "{\"name\": \"Group\", \"id\": \"/Group\", \"loc\": null, \"parts\": [{\"type\": \"shapes\", \"id\": \"/Group/Part_0\", \"name\": \"Part_0\", \"color\": \"#e8b024\", \"shape\": {\"vertices\": [\"_f32\", [24, 3], \"eJxjYGDYz4CJ7dFoGNseixg2OWxq0c1DNxebvdjsQ8ekuB2XOlxutwcA8hQjuQ==\"], \"triangles\": [1, 2, 0, 1, 3, 2, 5, 4, 6, 5, 6, 7, 11, 8, 9, 11, 10, 8, 15, 13, 12, 15, 12, 14, 19, 16, 17, 19, 18, 16, 23, 21, 20, 23, 20, 22], \"normals\": [\"_f32\", [24, 3], \"eJxjYGjYz8DA0MAABkSx7RmgDOLYYP5+EtjIdhDDJtUOYs0FswFs8yPp\"], \"edges\": [\"_f32\", [12, 2, 3], \"eJxjYGDYz4CJ7bGw7dHY+7GIYzODGLOwYWxyxNqJLobuFmzuwOoWACIjI7k=\"]}}]}",
+        "states": {
+         "/Group/Part_0": [
+          1,
+          1
+         ]
+        }
+       },
+       "tracks": []
+      }
+     },
+     "90212725d4e548349cf521260c72d463": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "c51fdc8e820c4d78b250504101d1b1a0": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "cfe87f4240fb450980232a8dd676f818": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "ffbc83a8f158482aa2cd7e6b3395735b": {
+      "model_module": "cad-viewer-widget",
+      "model_module_version": "^0.1.0",
+      "model_name": "CadViewerModel",
+      "state": {
+       "_model_module_version": "^0.1.0",
+       "_view_module_version": "^0.1.0",
+       "layout": "IPY_MODEL_cfe87f4240fb450980232a8dd676f818",
+       "options": {
+        "ambientIntensity": 0.9,
+        "cadWidth": 640,
+        "directIntensity": 0.12,
+        "height": 480,
+        "measure": false,
+        "needsAnimationLoop": false,
+        "normalLen": 0,
+        "ortho": true,
+        "theme": "light",
+        "treeWidth": 240
+       },
+       "shapes": {
+        "options": {
+         "ambientIntensity": 0.9,
+         "cadWidth": 640,
+         "directIntensity": 0.12,
+         "height": 480,
+         "needsAnimationLoop": false,
+         "normalLen": 0,
+         "ortho": true,
+         "theme": "light",
+         "treeWidth": 240
+        },
+        "shapes": "{\"name\": \"Group\", \"id\": \"/Group\", \"loc\": null, \"parts\": [{\"type\": \"shapes\", \"id\": \"/Group/Part_0\", \"name\": \"Part_0\", \"color\": \"#e8b024\", \"shape\": {\"vertices\": [\"_f32\", [24, 3], \"eJxjYGDYz4CJ7dFoGNseixg2OWxq0c1DNxebvdjsQ8ekuB2XOlxutwcA8hQjuQ==\"], \"triangles\": [1, 2, 0, 1, 3, 2, 5, 4, 6, 5, 6, 7, 11, 8, 9, 11, 10, 8, 15, 13, 12, 15, 12, 14, 19, 16, 17, 19, 18, 16, 23, 21, 20, 23, 20, 22], \"normals\": [\"_f32\", [24, 3], \"eJxjYGjYz8DA0MAABkSx7RmgDOLYYP5+EtjIdhDDJtUOYs0FswFs8yPp\"], \"edges\": [\"_f32\", [12, 2, 3], \"eJxjYGDYz4CJ7bGw7dHY+7GIYzODGLOwYWxyxNqJLobuFmzuwOoWACIjI7k=\"]}}]}",
+        "states": {
+         "/Group/Part_0": [
+          1,
+          1
+         ]
+        }
        },
        "tracks": []
       }
