removed lodash dependency, added css-loader for cad-viewer.css

--- a/test.ipynb
+++ b/test.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.execute(\"viewer.camera.position\", \"set\", (1,0,0), update=True, callback=action)"
+    "cv.execute(\"viewer.camera.position\", \"set\", (4.3, 0, 0), update=True, callback=action)"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.set(\"viewer.camera.zoom\", 1.2, update=True, callback=action)"
+    "cv.set(\"viewer.camera.zoom\", 0.8, update=True, callback=action)"
    ]
   },
   {
@@ -180,6 +180,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bbcf33bb-1282-4f30-a111-dc1c3fa935ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.result[\"result\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e31ec33-ed91-4737-9785-89bbb5f7d02a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -206,72 +216,13 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "3fc41fd9749d4aa0943197209665b36e": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_50dee06854e54b12a4d549f20be45e2f"
-      }
-     },
-     "3fdac10c18954c8ea367446ef2719c42": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_634328d7963a4d6c9c02ddb6ca94cfdb",
-       "outputs": [
-        {
-         "name": "stdout",
-         "output_type": "stream",
-         "text": "{'msg_id': 6, 'result': {'x': 0.9999999999999997, 'y': 0.9999999999999994, 'z': 0.9999999999999997}}\n{'msg_id': 7, 'result': [0.5]}\n{'msg_id': 8, 'result': {'x': 0.9999999999999993, 'y': 0.9999999999999992, 'z': 0.9999999999999992}}\n"
-        }
-       ]
-      }
-     },
-     "43f30a10e73241e2b06f749bd1581d69": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_d781a2399dc24de8a4efda552038912b",
-       "outputs": [
-        {
-         "name": "stdout",
-         "output_type": "stream",
-         "text": "{'msg_id': 9, 'result': {'x': 0.9999999999999997, 'y': 0.9999999999999994, 'z': 0.9999999999999997}}\n{'msg_id': 10, 'result': {'x': 0.9999999999999997, 'y': -6.123233995736764e-17, 'z': 6.123233995736764e-17}}\n{'msg_id': 11, 'result': [1.2]}\n{'msg_id': 12, 'result': {'x': 0.9999999999999993, 'y': -6.123233995736762e-17, 'z': 6.123233995736762e-17}}\n{'msg_id': 13, 'result': {'x': 0.9999999999999993, 'y': -6.123233995736762e-17, 'z': 6.123233995736762e-17}}\n{'msg_id': 14, 'result': [1.2]}\n"
-        }
-       ]
-      }
-     },
-     "50dee06854e54b12a4d549f20be45e2f": {
+     "082b3f856f8e4e289b8861ff09658b02": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.2.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "634328d7963a4d6c9c02ddb6ca94cfdb": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "af591e107e0d4b48b3cb75b25bf55043": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_c770513e30fc44e8bab479d390ca9113",
-       "outputs": [
-        {
-         "name": "stdout",
-         "output_type": "stream",
-         "text": "{\"msg_id\":1,\"result\":{\"x\":0.9999999999999997,\"y\":0.9999999999999994,\"z\":0.9999999999999997}}\n{\"msg_id\":2,\"result\":[0.5]}\n{\"msg_id\":3,\"result\":[0.5]}\n{\"msg_id\":4,\"result\":0.6978572102141091}\n{\"msg_id\":5,\"result\":{\"x\":0.9999999999999926,\"y\":0.9999999999999925,\"z\":0.9999999999999925}}\n"
-        }
-       ]
-      }
-     },
-     "bef47854fdc2402ca892cbd5828067ac": {
+     "0e4d042eb35d41ccba3fbf150d253fb1": {
       "model_module": "cad-viewer-widget",
       "model_module_version": "^0.1.0",
       "model_name": "CadViewerModel",
@@ -290,7 +241,7 @@
         "theme": "light",
         "treeWidth": 240
        },
-       "result": "{\"msg_id\":14,\"result\":[1.2]}",
+       "result": "{\"msg_id\":3,\"result\":{\"x\":2.4999999999999987,\"y\":2.4999999999999982,\"z\":2.4999999999999982}}",
        "shapes": {
         "options": {
          "ambientIntensity": 0.9,
@@ -314,17 +265,20 @@
        "tracks": []
       }
      },
-     "c770513e30fc44e8bab479d390ca9113": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "d781a2399dc24de8a4efda552038912b": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
+     "f1c089459577451c839d8fd6b50318fd": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_082b3f856f8e4e289b8861ff09658b02",
+       "outputs": [
+        {
+         "name": "stdout",
+         "output_type": "stream",
+         "text": "{'msg_id': 1, 'result': {'x': 4.299999999999998, 'y': -2.6329906181668082e-16, 'z': 2.6329906181668082e-16}}\n{'msg_id': 2, 'result': [0.8]}\n{'msg_id': 3, 'result': {'x': 2.4999999999999987, 'y': 2.4999999999999982, 'z': 2.4999999999999982}}\n"
+        }
+       ]
+      }
      }
     },
     "version_major": 2,
