adapted to changes

--- a/test.ipynb
+++ b/test.ipynb
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import json\n",
     "from cad_viewer_widget import CadViewer\n",
+    "from sidecar import Sidecar\n",
     "\n",
     "names = [\"box\", \"box1\", \"boxes\", \"edges\", \"faces\", \"hexapod\", \"hexapod_m\", \"vertices\"]\n",
     "objects = {}\n",
@@ -26,14 +27,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c990b21e-f998-4fb2-8db2-324c6131a367",
+   "id": "78bd48df-b6c9-4939-bd80-2ea47be42ef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = Sidecar(title=\"Tests\")\n",
+    "\n",
+    "with sc:\n",
+    "    cv = CadViewer(\n",
+    "        cad_width=800, \n",
+    "        height=600, \n",
+    "        tree_width=250, \n",
+    "        theme=\"light\", \n",
+    "        tools=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2047d07b-2653-479f-b9cc-29b3947d9496",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"hexapod\"\n",
     "\n",
-    "cv = CadViewer(cadWidth=640, height=480, theme=\"light\", tools=True)\n",
-    "cv.add_shapes(objects[name], states[name], control=\"trackball\", ticks=10, axes=True, grid=[False, False, False], transparent=False)"
+    "cv.add_shapes(\n",
+    "    objects[name],\n",
+    "    states[name],\n",
+    "    ortho=True,\n",
+    "    control=\"orbit\",\n",
+    "    ticks=10,\n",
+    "    axes=True,\n",
+    "    axes0=False,\n",
+    "    grid=[True, False, False], \n",
+    "    transparent=True,\n",
+    "    black_edges=False,\n",
+    "    edge_color=\"#707070\",\n",
+    "    ambient_intensity=0.5,\n",
+    "    direct_intensity=0.3,\n",
+    "    timeit=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceca8f0b-8b51-4748-b36a-72f358a2284a",
+   "metadata": {},
+   "source": [
+    "# Widget comms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90bc1d1d-7e2a-459a-a219-55a0e52a6f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.states"
    ]
   },
   {
@@ -101,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.ambient_intensity = 0.8\n",
-    "cv.widget.direct_intensity = 0.19"
+    "cv.widget.ambient_intensity = 0.9\n",
+    "cv.widget.direct_intensity = 0.3"
    ]
   },
   {
@@ -123,8 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ec = cv.widget.edge_color\n",
-    "ec"
+    "ec = cv.widget.edge_color"
    ]
   },
   {
@@ -154,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.grid = [not g for g in cv.widget.grid]\n",
+    "# cv.widget.grid = [not g for g in cv.widget.grid]\n",
     "cv.widget.axes = not cv.widget.axes\n",
     "cv.widget.axes0 = not cv.widget.axes0\n",
     "cv.widget.transparent = not cv.widget.transparent\n",
@@ -174,37 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de8362c9-9f9d-4cdd-8eee-d61fdba2dd5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom_speed = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "645276f3-347f-4987-bd61-00fa41303f4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.pan_speed = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25d397fb-762b-4e12-8711-50ef7776a9c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.rotate_speed = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9af3f01b-c1d1-4b2c-a699-f5324189e47a",
+   "id": "ed5ac81a-a329-4f5a-ab0a-f91ff6b6d9c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,11 +235,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff0f5d9-6be3-4cf3-9c58-aa2513062eb5",
+   "id": "1135f786-8f67-40b1-9d37-07c7faaeda6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.widget.zoom = 1"
+    "cv.widget.zoom_speed = 5\n",
+    "cv.widget.pan_speed = 5\n",
+    "cv.widget.rotate_speed = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "982397ff-1c84-4dba-8e24-c17351da4e91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.widget.zoom_speed = 1\n",
+    "cv.widget.pan_speed = 1\n",
+    "cv.widget.rotate_speed = 1"
    ]
   },
   {
@@ -234,384 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dee9423-21e3-4546-90ab-b68f2c78e49e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"boxes\"\n",
-    "\n",
-    "cv = CadViewer(cadWidth=640, height=480, theme=\"light\", tools=True)\n",
-    "cv.add_shapes(objects[name], states[name], control=\"trackball\", ticks=10, axes=True, grid=[False, False, False], transparent=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "860cc882-f6ec-447a-a736-154753fb9255",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position = [960,0,0]\n",
-    "cv.widget.zoom = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "699fd89e-151d-4236-8161-a68403df902d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position = [560,560,560]\n",
-    "cv.widget.zoom = 0.95"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac1f2fc1-1571-448b-8eb8-db79831d9bdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.tools = not cv.widget.tools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ea9f489-379f-4699-8987-93d478cbc1b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.states = {'/Group/Part_0': (1, 1)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ecfe5d8-28bd-4fb8-b5bc-8ae5a5062845",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position, cv.widget.zoom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afc3dccf-f4a2-4ea3-b34f-7154223b3cd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "new_pos = (rotate_z(np.asarray(cv.widget.position) - np.asarray(cv.widget.target), 45) + np.asarray(cv.widget.target)).tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a80003a-f889-479f-b85a-dc6f03228d1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position = new_pos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1f96c21-3edc-42bf-b4da-e055d257cfc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "\n",
-    "def rotate_x(vector, angle):\n",
-    "    angle = rad(angle)\n",
-    "    mat = np.array(\n",
-    "        [\n",
-    "            [1, 0, 0],\n",
-    "            [0, math.cos(angle), -math.sin(angle)],\n",
-    "            [0, math.sin(angle), math.cos(angle)],\n",
-    "        ]\n",
-    "    )\n",
-    "    return tuple(np.matmul(mat, vector))\n",
-    "\n",
-    "\n",
-    "def rad(deg):\n",
-    "    return deg / 180.0 * math.pi\n",
-    "\n",
-    "\n",
-    "def rotate_y(vector, angle):\n",
-    "    angle = rad(angle)\n",
-    "    mat = np.array(\n",
-    "        [\n",
-    "            [math.cos(angle), 0, math.sin(angle)],\n",
-    "            [0, 1, 0],\n",
-    "            [-math.sin(angle), 0, math.cos(angle)],\n",
-    "        ]\n",
-    "    )\n",
-    "    return tuple(np.matmul(mat, vector))\n",
-    "\n",
-    "\n",
-    "def rotate_z(vector, angle):\n",
-    "    angle = rad(angle)\n",
-    "    mat = np.array(\n",
-    "        [\n",
-    "            [math.cos(angle), -math.sin(angle), 0],\n",
-    "            [math.sin(angle), math.cos(angle), 0],\n",
-    "            [0, 0, 1],\n",
-    "        ]\n",
-    "    )\n",
-    "    return tuple(np.matmul(mat, vector))\n",
-    "\n",
-    "\n",
-    "def rotate(vector, angle_x=0, angle_y=0, angle_z=0):\n",
-    "    v = tuple(vector)\n",
-    "    if angle_z != 0:\n",
-    "        v = rotate_z(v, angle_z)\n",
-    "    if angle_y != 0:\n",
-    "        v = rotate_y(v, angle_y)\n",
-    "    if angle_x != 0:\n",
-    "        v = rotate_x(v, angle_x)\n",
-    "    return v"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e8b66d2-6577-48b6-a226-8ee4589c3da8",
-   "metadata": {},
-   "source": [
-    "# Observe position and zoom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a2ae109-72be-47b9-a8b6-42ba21b961c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position, cv.widget."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f47423e-868d-4865-8888-a727515aefb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ipywidgets import Output\n",
-    "\n",
-    "out = Output()\n",
-    "out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d728f38b-47bb-4273-8268-ac8bb2799ef1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def on_zoom_change(change):\n",
-    "    with out:\n",
-    "        print(change[\"old\"], \"==>\", change[\"new\"])\n",
-    "\n",
-    "cv.widget.observe(on_zoom_change, names='zoom')\n",
-    "\n",
-    "def on_position_change(change):\n",
-    "    with out:\n",
-    "        print(change[\"old\"], \"==>\", change[\"new\"])\n",
-    "\n",
-    "cv.widget.observe(on_position_change, names='position')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5efdfa26-41d8-4786-bb6a-98979f9cdc90",
-   "metadata": {},
-   "source": [
-    "# Widget comms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4abe327-bb73-4321-9e77-f7ce8ed4e1bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a9735cc-3422-4c6d-9f2f-427f6acaa520",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be4922c4-c06b-498e-83c1-b05bb84907cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position = (971.5754459258509, -3.125699577493268e-14, -10.09133273345056)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3f41e12-c80f-4b36-ad22-78bc4a4e30ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.position = (559.6495141762463, 562.7012872475353, 552.6099545140847)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c120d5dc-e8de-4167-8bfd-f64fc91786b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.grid = [False, False, True]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73800a59-1099-4883-871c-46373aa96355",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.axes = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cebcc2c4-1d60-49f9-89ba-5733630a48ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.axes0 = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9917161d-f020-4a44-85c3-082d7d4f8be4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.transparent = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0462ad5f-1cc6-4d77-95e3-001e933c22c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.black_edges = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8e4f762-0388-4e1e-a31c-adca387ba066",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.tools = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "555a722c-8585-4289-a96a-f49cf720c871",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom_speed = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2fcc0a3-8de0-4d84-bea7-97841ede9ed6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.pan_speed = 0.75"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61ec383a-06d7-4c0b-80fc-97632bd1f628",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.rotate_speed = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a85b635d-e7d7-4a56-9a4a-9a6382030b28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.ortho = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f8c0a38-ef97-46f1-b27e-7f887637d1ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6388e1c1-6c83-43f9-b071-ecde1d3bacad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.lastPick"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ed10e83-ecaf-4acf-8e90-e455aed7e9db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv.widget.zoom = 0.5\n",
-    "cv.widget.position = [4,0,0]\n",
-    "cv.widget.position, cv.widget.zoom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7f97ea9-3d53-49df-93d5-83970cea113e",
+   "id": "f7277245-5b15-41f7-8bd2-785aa359d023",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -619,7 +277,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c08899fe-aa2e-46f8-aa24-4b5d0059fd08",
+   "id": "20da23c4-1f75-458f-9be5-b2c897598929",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6089e3a-79cb-4fbd-9b4b-452c39e73701",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f0c7796-edad-4145-9843-1140c43df1b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0872c3be-8081-46ad-9e6c-46d65a90d4d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdc6c5b6-50fa-445e-914e-abd5060e6412",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -651,14 +341,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def action(zoom_factor):\n",
-    "    def inner(result):\n",
-    "        value = json.loads(result)[\"result\"]\n",
-    "        cv.set(\"viewer.camera.zoom\", zoom_factor * value, update=True, callback=debug)\n",
-    "    return inner\n",
+    "from ipywidgets import Output\n",
     "\n",
-    "def zoom(zoom_factor):\n",
-    "    cv.get(\"viewer.camera.zoom\", callback=action(zoom_factor))"
+    "def action(result):\n",
+    "    value = json.loads(result)[\"result\"]\n",
+    "    with out:\n",
+    "        print(value)\n",
+    "\n",
+    "out = Output()\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fab7ae8-65af-4cfc-8906-6795aa487a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv.execute(\"addShapes\", None, callback=action)"
    ]
   },
   {
@@ -835,12 +536,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddb9b01a-5938-4e3b-b945-240f5d09b8b3",
+   "metadata": {},
+   "source": [
+    "# BACKUP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a097f3-c57d-4980-8550-04a1d63aac40",
+   "id": "00f1d51b-ede3-45ea-9dec-4a01d36886fc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "def rotate_x(vector, angle):\n",
+    "    angle = rad(angle)\n",
+    "    mat = np.array(\n",
+    "        [\n",
+    "            [1, 0, 0],\n",
+    "            [0, math.cos(angle), -math.sin(angle)],\n",
+    "            [0, math.sin(angle), math.cos(angle)],\n",
+    "        ]\n",
+    "    )\n",
+    "    return tuple(np.matmul(mat, vector))\n",
+    "\n",
+    "\n",
+    "def rad(deg):\n",
+    "    return deg / 180.0 * math.pi\n",
+    "\n",
+    "\n",
+    "def rotate_y(vector, angle):\n",
+    "    angle = rad(angle)\n",
+    "    mat = np.array(\n",
+    "        [\n",
+    "            [math.cos(angle), 0, math.sin(angle)],\n",
+    "            [0, 1, 0],\n",
+    "            [-math.sin(angle), 0, math.cos(angle)],\n",
+    "        ]\n",
+    "    )\n",
+    "    return tuple(np.matmul(mat, vector))\n",
+    "\n",
+    "\n",
+    "def rotate_z(vector, angle):\n",
+    "    angle = rad(angle)\n",
+    "    mat = np.array(\n",
+    "        [\n",
+    "            [math.cos(angle), -math.sin(angle), 0],\n",
+    "            [math.sin(angle), math.cos(angle), 0],\n",
+    "            [0, 0, 1],\n",
+    "        ]\n",
+    "    )\n",
+    "    return tuple(np.matmul(mat, vector))\n",
+    "\n",
+    "\n",
+    "def rotate(vector, angle_x=0, angle_y=0, angle_z=0):\n",
+    "    v = tuple(vector)\n",
+    "    if angle_z != 0:\n",
+    "        v = rotate_z(v, angle_z)\n",
+    "    if angle_y != 0:\n",
+    "        v = rotate_y(v, angle_y)\n",
+    "    if angle_x != 0:\n",
+    "        v = rotate_x(v, angle_x)\n",
+    "    return v"
+   ]
   }
  ],
  "metadata": {
