adapted to code

--- a/test.ipynb
+++ b/test.ipynb
@@ -50,18 +50,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"hexapod\"\n",
+    "name = \"box1\"\n",
     "\n",
     "cv.add_shapes(\n",
     "    objects[name],\n",
     "    states[name],\n",
     "    ortho=True,\n",
-    "    control=\"orbit\",\n",
-    "    ticks=10,\n",
+    "    control=\"trackball\",\n",
+    "    ticks=5,\n",
     "    axes=True,\n",
     "    axes0=False,\n",
     "    grid=[True, False, False], \n",
-    "    transparent=True,\n",
+    "    transparent=False,\n",
     "    black_edges=False,\n",
     "    edge_color=\"#707070\",\n",
     "    ambient_intensity=0.5,\n",
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.set_states({\n",
+    "cv.update_states({\n",
     "    '/bottom/bottom_0': (1,0),\n",
     "    '/bottom/top/top_0': [0,1],\n",
     "})"
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv.set_states({\n",
+    "cv.update_states({\n",
     "    '/bottom/bottom_0': (1,1),\n",
     "    '/bottom/top/top_0': [1,1],\n",
     "})"
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "cv.widget.ambient_intensity = 0.9\n",
-    "cv.widget.direct_intensity = 0.3"
+    "cv.widget.direct_intensity = 0.5"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cv.widget.grid = [not g for g in cv.widget.grid]\n",
+    "cv.widget.grid = [not g for g in cv.widget.grid]\n",
     "cv.widget.axes = not cv.widget.axes\n",
     "cv.widget.axes0 = not cv.widget.axes0\n",
     "cv.widget.transparent = not cv.widget.transparent\n",
