--- a/test.ipynb
+++ b/test.ipynb
@@ -50,22 +50,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"box1\"\n",
+    "name = \"hexapod\"\n",
     "\n",
     "cv.add_shapes(\n",
     "    objects[name],\n",
     "    states[name],\n",
     "    ortho=True,\n",
     "    control=\"trackball\",\n",
-    "    ticks=5,\n",
+    "    ticks=20,\n",
     "    axes=True,\n",
     "    axes0=False,\n",
     "    grid=[True, False, False], \n",
-    "    transparent=False,\n",
+    "    transparent=True,\n",
     "    black_edges=False,\n",
     "    edge_color=\"#707070\",\n",
     "    ambient_intensity=0.5,\n",
     "    direct_intensity=0.3,\n",
+    "    reset_camera=False,\n",
+    "#    reset_camera=True,\n",
+    "#    position=(-523.1876106053778, 220.0057378967463, 786.3865378864517),\n",
+    "#    quaternion=(-0.3113879332023978, 0.011019379723961274, 0.8909337230080648, 0.33038345832295263),\n",
+    "#    zoom=0.5,\n",
     "    timeit=False,\n",
     ")"
    ]
@@ -272,7 +277,9 @@
    "id": "f7277245-5b15-41f7-8bd2-785aa359d023",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cv.rotate_x(30)"
+   ]
   },
   {
    "cell_type": "code",
